# Glass

./: .gitignore  .rules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REVIEWERS.conl  run-glass.sh  typos.toml
.cargo/: collab-config.toml
.config/: nextest.toml
.github/: actionlint.yml
.github/workflows/: add_commented_closed_issue_to_project.yml  after_release.yml  assign-reviewers.yml  autofix_pr.yml  bump_collab_staging.yml  bump_patch_version.yml  catch_blank_issues.yml  cherry_pick.yml  community_champion_auto_labeler.yml  community_close_stale_issues.yml  community_update_all_top_ranking_issues.yml  community_update_weekly_top_ranking_issues.yml  compare_perf.yml  congrats.yml  danger.yml  deploy_cloudflare.yml  docs_automation.yml  extension_bump.yml  extension_release.yml  extension_tests.yml  extension_workflow_rollout.yml  first_contribution_labeler.yml  good_first_issue_notifier.yml  pr_labeler.yml  publish_extension_cli.yml  release.yml  release_glass.yml  release_nightly.yml  run_agent_evals.yml  run_bundling.yml  run_cron_unit_evals.yml  run_tests.yml  run_unit_evals.yml  slack_notify_first_responders.yml  test_signing.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/agent_ui/: Cargo.toml
crates/app_runtime_ui/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: audio.rs  audio_settings.rs
crates/audio/src/audio_pipeline/: echo_canceller.rs
crates/browser/: Cargo.toml
crates/browser/src/: bookmarks.rs  browser.rs  browser_view.rs  cef_browser.rs  cef_client.rs  cef_instance.rs  cef_keyboard_handler.rs  cef_load_handler.rs  cef_render_handler.rs  client.rs  context_menu_handler.rs  display_handler.rs  download_handler.rs  events.rs  find_handler.rs  history.rs  input.rs  input_handler.rs  keycodes.rs  life_span_handler.rs  load_handler.rs  macos_protocol.rs  new_tab_page.rs  omnibox.rs  permission_handler.rs  render_handler.rs  request_handler.rs  session.rs  tab.rs  toolbar.rs
crates/browser/src/browser_view/: actions.rs  bookmarks.rs  content.rs  context_menu.rs  input.rs  navigation.rs  session.rs  swipe.rs  tab_strip.rs  tabs.rs
crates/component_preview/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/edit_prediction_cli/: Cargo.toml
crates/editor/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/native_platforms/: Cargo.toml
crates/native_platforms/src/: native_platforms.rs
crates/native_platforms/src/apple/: app_store_connect.rs  build.rs  device.rs  install.rs  launch.rs  mod.rs  run.rs  simulator.rs  xcode.rs
crates/native_platforms_ui/: Cargo.toml
crates/native_platforms_ui/src/: build_controller.rs  build_logs.rs  native_platforms_ui.rs  panel.rs
crates/native_platforms_ui/src/app_store_connect/: mod.rs  tab.rs
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/toast/: Cargo.toml
crates/toast/src/: status_toast.rs  toast.rs  toast_layer.rs
crates/ui/: Cargo.toml
crates/vim/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace_modes/: Cargo.toml
crates/workspace_modes/docs/: design.md
crates/workspace_modes/src/: mode_container.rs  mode_registry.rs  mode_switcher.rs  mode_view_registry.rs  persistence.rs  workspace_modes.rs
crates/workspace_modes/src/modes/: editor_mode.rs  mod.rs  terminal_mode.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs  (+2 more)
docs/: AGENTS.md  README.md  book.toml
docs/src/: SUMMARY.md  configuring-languages.md  configuring-zed.md  debugger.md  finding-navigating.md  git.md  key-bindings.md  linux.md  multibuffers.md  outline-panel.md  remote-development.md  toolchains.md  visual-customization.md
extensions/: README.md
script/: build-cef  bundle-mac-cef  setup-sccache
(+306 files in other folders)
