[package]
name = "audio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/audio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
gpui.workspace = true
log.workspace = true
rodio.workspace = true
settings.workspace = true
util.workspace = true
