[package]
name = "browser"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/browser.rs"
doctest = false

[features]
test-support = ["gpui/test-support"]

[dependencies]
anyhow.workspace = true
gpui.workspace = true
ui.workspace = true
theme.workspace = true
settings.workspace = true
workspace_modes.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
