[package]
name = "native_platforms"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/native_platforms.rs"
doctest = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
util.workspace = true
walkdir.workspace = true
