[package]
name = "toast"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/toast.rs"
doctest = false

[dependencies]
component.workspace = true
gpui.workspace = true
ui.workspace = true
zed_actions.workspace = true
