[package]
name = "workspace_modes"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/workspace_modes.rs"
doctest = false

[features]
test-support = ["gpui/test-support"]

[dependencies]
collections.workspace = true
gpui.workspace = true
schemars.workspace = true
serde.workspace = true
ui.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
